# agent-handshake

./: README.md  pyproject.toml
.github/workflows/: build-wheel.yml
docs/: api.md
examples/: request-valid.json
src/api_contract_validator/: __init__.py  __main__.py  model.py  validate.py
src/api_contract_validator/schemas/: request.schema.json
tests/: test_request.py
